--- a/index.html
+++ b/index.html
@@ -13,45 +13,60 @@
 
     <section id="gallery">
         <div class="carousel">
+            <!-- Slide Items -->
             <div class="carousel-item active">
-                <img src="images/dish1.jpg" alt="pheasant and bacon casserole">
+                <img src="images/dish1.jpg" alt="Pheasant and Bacon Casserole">
                 <div class="caption">Pheasant and Bacon Casserole</div>
             </div>
             <div class="carousel-item">
-                <img src="images/dish2.jpg" alt="Pan fried hake with mash potatoes, roast asparagus and wild garlic pesto">
+                <img src="images/dish2.jpg" alt="Pan-Fried Hake with Mash Potatoes, Roast Asparagus, and Wild Garlic Pesto">
                 <div class="caption">Pan-Fried Hake with Mash Potatoes, Roast Asparagus, and Wild Garlic Pesto</div>
             </div>
             <div class="carousel-item">
-                <img src="images/dish3.jpg" alt="Slow roasted beef">
+                <img src="images/dish3.jpg" alt="Slow Roasted Beef">
                 <div class="caption">Slow Roasted Beef</div>
             </div>
             <div class="carousel-item">
-                <img src="images/dish4.jpg" alt="Lemon possets">
+                <img src="images/dish4.jpg" alt="Lemon Possets">
                 <div class="caption">Lemon Possets</div>
             </div>
             <div class="carousel-item">
-                <img src="images/dish5.jpg" alt="Baked camenbert with garlic and rosemary tips">
+                <img src="images/dish5.jpg" alt="Baked Camembert with Garlic and Rosemary Tips">
                 <div class="caption">Baked Camembert with Garlic and Rosemary Tips</div>
             </div>
             <div class="carousel-item">
-                <img src="images/dish6.jpg" alt="Chocolate sponge">
+                <img src="images/dish6.jpg" alt="Chocolate Sponge">
                 <div class="caption">Chocolate Sponge</div>
             </div>
             <div class="carousel-item">
-                <img src="images/dish7.jpg" alt="Globe artichoke with a lemon butter sauce">
+                <img src="images/dish7.jpg" alt="Globe Artichoke with a Lemon Butter Sauce">
                 <div class="caption">Globe Artichoke with a Lemon Butter Sauce</div>
             </div>
             <div class="carousel-item">
-                <img src="images/dish8.jpg" alt="Sirloin steak">
+                <img src="images/dish8.jpg" alt="Sirloin Steak">
                 <div class="caption">Sirloin Steak</div>
             </div>
             <div class="carousel-item">
-                <img src="images/dish9.jpg" alt="Raspberry tart with a pistachio crust">
+                <img src="images/dish9.jpg" alt="Raspberry Tart with a Pistachio Crust">
                 <div class="caption">Raspberry Tart with a Pistachio Crust</div>
             </div>
 
+            <!-- Navigation Arrows -->
             <button class="prev" onclick="moveCarousel(-1)">&#10094;</button>
             <button class="next" onclick="moveCarousel(1)">&#10095;</button>
+
+            <!-- Indicators -->
+            <div class="carousel-indicators">
+                <span class="indicator active" onclick="setCurrentSlide(0)"></span>
+                <span class="indicator" onclick="setCurrentSlide(1)"></span>
+                <span class="indicator" onclick="setCurrentSlide(2)"></span>
+                <span class="indicator" onclick="setCurrentSlide(3)"></span>
+                <span class="indicator" onclick="setCurrentSlide(4)"></span>
+                <span class="indicator" onclick="setCurrentSlide(5)"></span>
+                <span class="indicator" onclick="setCurrentSlide(6)"></span>
+                <span class="indicator" onclick="setCurrentSlide(7)"></span>
+                <span class="indicator" onclick="setCurrentSlide(8)"></span>
+            </div>
         </div>
     </section>
 
