-change colour scheme -enhanced design with hover effetcs -more responsive design

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iain Burden Food</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -52,8 +53,8 @@
             </div>
 
             <!-- Navigation Arrows -->
-            <button class="prev" onclick="moveCarousel(-1)">&#10094;</button>
-            <button class="next" onclick="moveCarousel(1)">&#10095;</button>
+            <button class="prev" onclick="moveCarousel(-1)">❮</button>
+            <button class="next" onclick="moveCarousel(1)">❯</button>
 
             <!-- Indicators -->
             <div class="carousel-indicators">
