-made the magin smaller -added dish 10

--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
                 </div>
                 <div class="caption">Raspberry Tart with a Pistachio Crust</div>
             </div>
+            <div class="carousel-item">
+                <div class="image-container">
+                    <img data-src="images/dish10.jpg" alt="Lancashire Hotpot" class="lazy-image">
+                    <div class="loading-spinner"></div>
+                </div>
+                <div class="caption">Lancashire Hotpot</div>
+            </div>
 
             <button class="prev" onclick="moveCarousel(-1)">❮</button>
             <button class="next" onclick="moveCarousel(1)">❯</button>
@@ -91,6 +98,7 @@
                 <span class="indicator" onclick="setCurrentSlide(6)"></span>
                 <span class="indicator" onclick="setCurrentSlide(7)"></span>
                 <span class="indicator" onclick="setCurrentSlide(8)"></span>
+                <span class="indicator" onclick="setCurrentSlide(9)"></span>
             </div>
         </div>
     </div>
